--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,18 @@ synthetic-data = [
   "autora-synthetic-data"
 ]
 
+docs = [
+  "mkdocs-material",
+  "mkdocs-gen-files",
+  "mkdocs-literate-nav",
+  "mkdocs-section-index",
+  "mkdocs-multirepo-plugin",
+  "mkdocstrings-python",
+  "mkdocs-jupyter",
+  "pymdown-extensions",
+]
+
+
 
 
 [project.urls]
