--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,14 +46,20 @@ nav:
     - BSR: '!import https://github.com/autoresearch/autora-theorist-bsr/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - Experimentalists:
     - Home: 'experimentalist/index.md'
-    - Novelty Sampler: '!import https://github.com/autoresearch/autora-experimentalist-novelty-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - Inequality Sampler: '!import https://github.com/autoresearch/autora-experimentalist-inequality-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - Nearest Value Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-nearest-value-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - Model Disagreement Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-model-disagreement-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - Uncertainty Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-uncertainty-sampler/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Novelty Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-novelty/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Inequality Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-inequality/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Nearest Value Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-nearest-value/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Model Disagreement Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-model-disagreement/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Uncertainty Sampler: '!import https://github.com/autoresearch/autora-experimentalist-sampler-uncertainty/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Falsification: '!import https://github.com/autoresearch/autora-experimentalist-falsification/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - Experiment Runners:
     - Home: 'experiment-runner/index.md'
-  - Synthetic Datasets: '!import https://github.com/autoresearch/autora-synthetic-data/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Firebase-Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-firebase-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Experimentation Managers:
+      - Firebase: '!import https://github.com/autoresearch/autora-experiment-runner-experimentation-manager-firebase/?branch=main&extra_imports=["mkdocs/base.yml"]'
+    - Recruitment Managers:
+      - Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-recruitment-manager-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
+  - Synthetic Data: '!import https://github.com/autoresearch/autora-synthetic-data/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - Workflow: '!import https://github.com/autoresearch/autora-workflow/?branch=main&extra_imports=["mkdocs/base.yml"]'
 - Contributor Guide:
   - Module Contributions
