refactor: inherit docs dependencies from core

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,14 +92,7 @@ synthetic-data = [
 ]
 
 docs = [
-  "mkdocs-material",
-  "mkdocs-gen-files",
-  "mkdocs-literate-nav",
-  "mkdocs-section-index",
-  "mkdocs-multirepo-plugin",
-  "mkdocstrings-python",
-  "mkdocs-jupyter",
-  "pymdown-extensions",
+  "autora-core[docs]",
 ]
 
 test = [
