--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,15 @@ theme:
     - content.action.view
     - navigation.indexes
 
+
+plugins:
+  multirepo:
+    nav_repos:
+      # There will be a navigation section with this section name
+      - name: falsification
+        # you can define the edit uri path
+        import_url: https://github.com/autoresearch/autora-experimentalist-falsification/?branch=main&extra_imports=["mkdocs/base.yml"]
+        imports: ["docs/*", "docs/sampler/*", "docs/pooler/*"]
 nav:
 - Introduction: 'index.md'
 - Tutorials:
@@ -46,14 +55,24 @@ nav:
     - BSR: '!import https://github.com/autoresearch/autora-theorist-bsr/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - Experimentalists:
     - Home: 'experimentalist/index.md'
-    - Falsification: '!import https://github.com/autoresearch/autora-experimentalist-falsification/?branch=main&extra_imports=["mkdocs/base.yml"]'
     - Samplers:
       - Novelty: '!import https://github.com/autoresearch/autora-experimentalist-sampler-novelty/?branch=main&extra_imports=["mkdocs/base.yml"]'
       - Inequality: '!import https://github.com/autoresearch/autora-experimentalist-sampler-inequality/?branch=main&extra_imports=["mkdocs/base.yml"]'
       - Nearest Value: '!import https://github.com/autoresearch/autora-experimentalist-sampler-nearest-value/?branch=main&extra_imports=["mkdocs/base.yml"]'
       - Model Disagreement: '!import https://github.com/autoresearch/autora-experimentalist-sampler-model-disagreement/?branch=main&extra_imports=["mkdocs/base.yml"]'
       - Uncertainty: '!import https://github.com/autoresearch/autora-experimentalist-sampler-uncertainty/?branch=main&extra_imports=["mkdocs/base.yml"]'
+      - Falsification:
+        - Home: 'falsification/docs/sampler/index.md'
+        - Quickstart: 'falsification/docs/sampler/quickstart.md'
+        - Examples:
+          - Basic Usage: 'falsification/docs/sampler/Basic Usage.ipynb'
+
     - Poolers:
+      - Falsification:
+        - Home: 'falsification/docs/pooler/index.md'
+        - Quickstart: 'falsification/docs/pooler/quickstart.md'
+        - Examples:
+          - Basic Usage: 'falsification/docs/pooler/Basic Usage.ipynb'
   - Experiment Runners:
     - Home: 'experiment-runner/index.md'
     - Firebase-Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-firebase-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
