--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,12 +75,13 @@ nav:
           - Basic Usage: 'falsification/docs/pooler/Basic Usage.ipynb'
   - Experiment Runners:
     - Home: 'experiment-runner/index.md'
+    - Synthetic: '!import https://github
+    .com/autoresearch/autora-synthetic/?branch=main&extra_imports=["mkdocs/base.yml"]'
     - Firebase-Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-firebase-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
     - Experimentation Managers:
       - Firebase: '!import https://github.com/autoresearch/autora-experiment-runner-experimentation-manager-firebase/?branch=main&extra_imports=["mkdocs/base.yml"]'
     - Recruitment Managers:
       - Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-recruitment-manager-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
-  - Synthetic Data: '!import https://github.com/autoresearch/autora-synthetic/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - Workflow: '!import https://github.com/autoresearch/autora-workflow/?branch=main&extra_imports=["mkdocs/base.yml"]'
 - Contributor Guide:
   - Overview: 'contribute/index.md'
