--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,10 +64,10 @@ extra_javascript: [
 nav:
 - Introduction: 'index.md'
 #- Tutorials:
-#  - Introduction: 'tutorials/index.md'
-#  - Automated Theorist         # TODO: add tutorial from somewhere
-#  - Automated Experimentalist  # TODO: add tutorial from somewhere
-#  - Closed-Loop Discovery      # TODO: add tutorial from somewhere
+#  - Introduction: 'tutorials/index.md'   # TODO: add tutorials
+#  - Automated Theorist                   # TODO: add tutorial from somewhere
+#  - Automated Experimentalist            # TODO: add tutorial from somewhere
+#  - Closed-Loop Discovery                # TODO: add tutorial from somewhere
 - User Guide:
   - Theorists:
     - Home: 'theorist/index.md'
