--- a/.github/workflows/test-pytest.yml
+++ b/.github/workflows/test-pytest.yml
@@ -23,4 +23,4 @@ jobs:
           cache: 'pip'
       - name: Install dependencies
         run: pip install -U ".[test]"
-      - run: pytest --doctest-modules
+      - run: pytest
