--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ plugins:
     include_source: true
     execute: false
     ignore_h1_titles: true
+  search: {}
 
 markdown_extensions:
   admonition: {}
@@ -53,6 +54,8 @@ markdown_extensions:
   pymdownx.arithmatex: # required for equation display
     generic: true
   pymdownx.snippets: {}
+  pymdownx.tabbed:
+    alternate_style: true
 
 extra_javascript: [
   # requirements for pymdownx.arithmetex:
@@ -68,42 +71,44 @@ nav:
 #  - Automated Theorist                   # TODO: add tutorial from somewhere
 #  - Automated Experimentalist            # TODO: add tutorial from somewhere
 #  - Closed-Loop Discovery                # TODO: add tutorial from somewhere
-- User Guide:
-  - Theorists:
-    - Home: 'theorist/index.md'
-    - DARTS: '!import https://github.com/autoresearch/autora-theorist-darts/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - BMS: '!import https://github.com/autoresearch/autora-theorist-bms/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - BSR: '!import https://github.com/autoresearch/autora-theorist-bsr/?branch=main&extra_imports=["mkdocs/base.yml"]'
-  - Experimentalists:
-    - Home: 'experimentalist/index.md'
-    - Pipeline: 'core/docs/pipeline/Experimentalist Pipeline Examples.ipynb'
-    - Samplers:
-      - Novelty: '!import https://github.com/autoresearch/autora-experimentalist-sampler-novelty/?branch=main&extra_imports=["mkdocs/base.yml"]'
-      - Inequality: '!import https://github.com/autoresearch/autora-experimentalist-sampler-inequality/?branch=main&extra_imports=["mkdocs/base.yml"]'
-      - Nearest Value: '!import https://github.com/autoresearch/autora-experimentalist-sampler-nearest-value/?branch=main&extra_imports=["mkdocs/base.yml"]'
-      - Model Disagreement: '!import https://github.com/autoresearch/autora-experimentalist-sampler-model-disagreement/?branch=main&extra_imports=["mkdocs/base.yml"]'
-      - Uncertainty: '!import https://github.com/autoresearch/autora-experimentalist-sampler-uncertainty/?branch=main&extra_imports=["mkdocs/base.yml"]'
-      - Falsification:
-        - Home: 'falsification/docs/sampler/index.md'
-        - Quickstart: 'falsification/docs/sampler/quickstart.md'
-        - Examples:
-          - Basic Usage: 'falsification/docs/sampler/Basic Usage.ipynb'
-    - Poolers:
-      - Falsification:
-        - Home: 'falsification/docs/pooler/index.md'
-        - Quickstart: 'falsification/docs/pooler/quickstart.md'
-        - Examples:
-          - Basic Usage: 'falsification/docs/pooler/Basic Usage.ipynb'
-  - Experiment Runners:
-    - Home: 'experiment-runner/index.md'
-    - Synthetic: '!import https://github.com/autoresearch/autora-synthetic/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - Firebase-Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-firebase-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - Experimentation Managers:
-      - Firebase: '!import https://github.com/autoresearch/autora-experiment-runner-experimentation-manager-firebase/?branch=main&extra_imports=["mkdocs/base.yml"]'
-    - Recruitment Managers:
-      - Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-recruitment-manager-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
-  - Workflow: '!import https://github.com/autoresearch/autora-workflow/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#- User Guide:
+#  - Theorists:
+#    - Home: 'theorist/index.md'
+#    - DARTS: '!import https://github.com/autoresearch/autora-theorist-darts/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#    - BMS: '!import https://github.com/autoresearch/autora-theorist-bms/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#    - BSR: '!import https://github.com/autoresearch/autora-theorist-bsr/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#  - Experimentalists:
+#    - Home: 'experimentalist/index.md'
+#    - Pipeline: 'core/docs/pipeline/Experimentalist Pipeline Examples.ipynb'
+#    - Samplers:
+#      - Novelty: '!import https://github.com/autoresearch/autora-experimentalist-sampler-novelty/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#      - Inequality: '!import https://github.com/autoresearch/autora-experimentalist-sampler-inequality/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#      - Nearest Value: '!import https://github.com/autoresearch/autora-experimentalist-sampler-nearest-value/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#      - Model Disagreement: '!import https://github.com/autoresearch/autora-experimentalist-sampler-model-disagreement/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#      - Uncertainty: '!import https://github.com/autoresearch/autora-experimentalist-sampler-uncertainty/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#      - Falsification:
+#        - Home: 'falsification/docs/sampler/index.md'
+#        - Quickstart: 'falsification/docs/sampler/quickstart.md'
+#        - Examples:
+#          - Basic Usage: 'falsification/docs/sampler/Basic Usage.ipynb'
+#    - Poolers:
+#      - Falsification:
+#        - Home: 'falsification/docs/pooler/index.md'
+#        - Quickstart: 'falsification/docs/pooler/quickstart.md'
+#        - Examples:
+#          - Basic Usage: 'falsification/docs/pooler/Basic Usage.ipynb'
+#  - Experiment Runners:
+#    - Home: 'experiment-runner/index.md'
+#    - Synthetic: '!import https://github.com/autoresearch/autora-synthetic/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#    - Firebase-Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-firebase-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#    - Experimentation Managers:
+#      - Firebase: '!import https://github.com/autoresearch/autora-experiment-runner-experimentation-manager-firebase/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#    - Recruitment Managers:
+#      - Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-recruitment-manager-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
+#  - Workflow: '!import https://github.com/autoresearch/autora-workflow/?branch=main&extra_imports=["mkdocs/base.yml"]'
 - Contributor Guide:
   - Overview: 'contribute/index.md'
   - Module Contributions: 'contribute/module.md'
   - Core Contributions: 'contribute/core.md'
+  - Environment Setup: 'contribute/setup.md'
+  - Pre-Commit Hooks: 'contribute/pre-commit-hooks.md'
