docs: update authors / maintainers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,13 @@
 name = "autora"
 description = "Autonomous Research Assistant (AutoRA) is a framework for automating steps of the empirical research process."
 authors = [
-  { name = "Sebastian Musslick", email = "sebastian_musslick@brown.edu" },
+  { name = "Sebastian Musslick", email = "sebastian_musslick@brown.edu" }
+]
+maintainers = [
+  { name = "Ben Andrew", email = "benjamin_andrew@brown.edu" },
+  { name = "George Dang", email = "george_dang@brown.edu" },
   { name = "John Gerrard Holland", email = "john_holland1@brown.edu" },
+  { name = "Younes Strittmatter", email = "younes_strittmatter@brown.edu" },
 ]
 readme = "README.md"
 license = { file = "LICENSE.md" }
