--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 
-site_name: Autonomous Empirical Research
+site_name: Automated Research Assistant
 repo_url: 'https://github.com/autoresearch/autora'
 edit_uri: 'blob/main/docs/'
 
