--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 
 site_name: Automated Research Assistant
+site_url: 'https://autoresearch.github.io/autora/'
 repo_url: 'https://github.com/autoresearch/autora'
 edit_uri: 'blob/main/docs/'
 
