--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,11 @@ extra_javascript: [
 
 nav:
 - Introduction: 'index.md'
+- Tutorials:
+  - Introduction: 'tutorials/index.md'
+  - Automated Theorist: 'bms-tutorial/docs/Basic Usage.ipynb'
+  - Automated Experimentalist: 'falsification-tutorial/docs/sampler/Basic Usage.ipynb'
+  - Closed-Loop Discovery: 'workflow-tutorial/docs/interactive/Basic Usage.ipynb'
 - User Guide:
   - Theorists:
     - Home: 'theorist/index.md'
