--- a/.github/workflows/publish-documentation-gh-pages.yml
+++ b/.github/workflows/publish-documentation-gh-pages.yml
@@ -1,6 +1,8 @@
 name: Publish Documentation to GitHub Pages
 
 on:
+  schedule:
+    - cron: '59 3 * * *' # this triggers deployment every night at 3:59 UTC / 23:59 EST
   workflow_dispatch:  # this allows us to run it manually
   release:
     types: [released]  # only deploy when we make a new `latest` release
