added local theorist tutorial and added some info

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,7 +77,7 @@ nav:
 - Introduction: 'index.md'
 - Tutorials:
   - Home: 'tutorials/index.md'
-  - Automated Theorist: 'bms-tutorial/docs/Basic Usage.ipynb'
+  - Automated Theorist: 'tutorials/theorist.ipynb'
   - Automated Experimentalist: 'falsification-tutorial/docs/sampler/Basic Usage.ipynb'
   - Closed-Loop Discovery: 'workflow-tutorial/docs/interactive/Basic Usage.ipynb'
 - User Guide:
