chore: add experiment-runner contribution to nave

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,7 @@ nav:
     - Overview: 'contribute/module.md'
     - Theorist Contribution: 'contribute/theorist-module.md'
     - Experimentalist Contribution: 'contribute/experimentalist-module.md'
+    - Experiment Runner Contribution: 'contribute/experiment-runner-module.md'
   - Core Contributions: 'contribute/core.md'
   - Environment Setup: 'contribute/setup.md'
   - Pre-Commit Hooks: 'contribute/pre-commit-hooks.md'
