--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,9 @@ plugins:
     hooks:
       on_env: "docs.hooks:on_env"
 
+hooks:
+  - mkdocs/hooks.py
+
 markdown_extensions:
   admonition: {}
   pymdownx.details: {}
